<resources>
    <string name="app_name">CardPayUI</string>
    <string name="app_title">SICOOB </string>
    <string name="app_titl">CARD </string>
    <string name="app_date">GOCO</string>
    <string name="app_tit">CLASSICO </string>
    <string name="app_date1">THRU</string>
    <string name="app_cvv">CVV</string>
    <string name="app_cv">mastercard</string>
    <string name="app_nome">ALEJANDRO G LELES</string>

</resources>