<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/creditCardContainer"
        android:layout_width="385dp"
        android:layout_height="262dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/credit_card_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="131dp"
        android:layout_height="36dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/creditCardContainer"
        app:layout_constraintTop_toTopOf="@id/creditCardContainer" />

    <TextView
        android:id="@+id/txtTitl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_titl"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/creditCardContainer"
        app:layout_constraintTop_toTopOf="@id/creditCardContainer" />

    <TextView
        android:id="@+id/txtTi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/app_tit"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/creditCardContainer"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/editCreditCardNumber"
        android:layout_width="297dp"
        android:layout_height="37dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginEnd="60dp"
        android:background="@android:color/transparent"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="23"
        android:text="5660  0000  0000  0000"
        android:textColor="#b7b5b7"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/creditCardContainer"
        app:layout_constraintEnd_toEndOf="@id/creditCardContainer"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitl"
        app:layout_constraintVertical_bias="0.481" />

    <TextView
        android:id="@+id/txtMonthAndYear"
        android:layout_width="19dp"
        android:layout_height="9dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="243dp"
        android:text="@string/app_date"
        android:textColor="@color/white"
        android:textSize="7sp"
        app:layout_constraintBottom_toBottomOf="@+id/creditCardContainer"
        app:layout_constraintEnd_toEndOf="@+id/creditCardContainer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/creditCardContainer"
        app:layout_constraintTop_toTopOf="@+id/creditCardContainer"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/txtMonthAndYea"
        android:layout_width="18dp"
        android:layout_height="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="56dp"
        android:text="@string/app_date1"
        android:textColor="@color/white"
        android:textSize="7sp"
        app:layout_constraintBottom_toBottomOf="@+id/creditCardContainer"
        app:layout_constraintEnd_toStartOf="@+id/editMonthAndYear"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/creditCardContainer"
        app:layout_constraintTop_toTopOf="@+id/creditCardContainer"
        app:layout_constraintVertical_bias="0.782" />

    <TextView
        android:layout_width="217dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="18dp"
        android:background="@android:color/transparent"
        android:text="@string/app_nome"
        android:textColor="#b7b5b7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/creditCardContainer"
        app:layout_constraintEnd_toEndOf="@+id/creditCardContainer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/creditCardContainer"
        app:layout_constraintTop_toTopOf="@+id/creditCardContainer"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/editMonthAndYear"
        android:layout_width="142dp"
        android:layout_height="21dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="53dp"
        android:background="@android:color/transparent"
        android:text="10/24"
        android:textColor="#b7b5b7"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/creditCardContainer"
        app:layout_constraintEnd_toEndOf="@id/creditCardContainer"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toEndOf="@+id/txtMonthAndYear"
        app:layout_constraintTop_toTopOf="@+id/creditCardContainer"
        app:layout_constraintVertical_bias="0.97" />

    <TextView
        android:id="@+id/editCVV"
        android:layout_width="84dp"
        android:layout_height="14dp"
        android:layout_marginBottom="7dp"
        android:background="@android:color/transparent"
        android:text="@string/app_cv"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/creditCardContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/creditCardContainer"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="41dp"
        android:layout_height="37dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="308dp"
        app:layout_constraintEnd_toEndOf="@+id/creditCardContainer"
        app:layout_constraintTop_toTopOf="@+id/creditCardContainer"
        app:srcCompat="@drawable/chip2"
        tools:visibility="visible" />


    <ImageView
        android:id="@+id/imageViewYellow"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/creditCardContainer"
        app:layout_constraintTop_toTopOf="@+id/creditCardContainer"
        app:srcCompat="@drawable/circle_yellow"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageViewRed"
        android:layout_width="27dp"
        android:layout_height="24dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="@+id/creditCardContainer"
        app:layout_constraintTop_toTopOf="@+id/creditCardContainer"
        app:srcCompat="@drawable/circle_red"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>